--- a/Transfer_Learning/eccv_submission/introduction.tex
+++ b/Transfer_Learning/eccv_submission/introduction.tex
@@ -10,7 +10,7 @@ In this work we focus on transfer learning in multi-modal reasoning tasks combin
 While these datasets seem to be well suited for transfer learning, they do not tackle that issue directly.
 In particular,~\cite{johnson2017clevr} introduces the CLEVR dataset along with two variants (CoGenT-A and CoGenT-B) with varying combinations of visual attributes.
 Similarly, COG~\cite{yang2018dataset}, a Video QA reasoning dataset, contains two variants (Canonical and Hard) with different number of frames and scene complexity.
-Both datasets come with a number of task classes that require similar reasoning abilities (e.g. compare or count objects).
+Both datasets come with a number of question categories that require similar reasoning abilities (e.g. compare or count objects).
 The open question we address in this paper is whether we can build a neural architecture that fosters transfer learning and generalizes from simpler to more complex reasoning tasks.
 
 \noindent The contributions of this paper are the following:
