--- a/Transfer_Learning/eccv_submission/transfer_learning.tex
+++ b/Transfer_Learning/eccv_submission/transfer_learning.tex
@@ -7,15 +7,12 @@ multiple ways, depending on how the two domains are related. This includes visua
 To establish a formal framework for these various aspects, we first recall the basic theoretical notions in transfer learning~\cite{pan2009survey} relevant to our setting.
 
 A \emph{domain} is a pair $\cD = (\cX,P(X))$, where $\cX$ is a feature space and $P(X)$ is a probability distribution on $\cX$.
-For visual reasoning problems considered in this paper,
-$\cX$ will consist of purely visual inputs, i.e., either images or videos in some cases, or
-a combination of both visual inputs and questions in other cases.
+For visual reasoning problems considered in this paper, the feature space
+$\cX$ is some appropriate subset of the Cartesian product of visual inputs and questions.
 A \emph{task} is a pair $\cT= (\cY,f(\cdot))$, where $\cY$ is a label space and $f: \cX \to \cY$ is a prediction function.
-When the domain elements consist of both the question and the visual input, there is only one task, namely, to answer the
-question\footnote{% 
+For visual reasoning, the task is simply to answer the
+given question on the given visual input\footnote{% 
 	For the COG dataset, the answer is a tuple, one for each frame in the video, whereas typical video answering datasets only require a single answer for the entire video.}.
-If the domain elements consist of just the visual inputs, then the task is further parameterized the question so that each question
-defines a separate task.
 
 \begin{definition}[\cite{pan2009survey}]
 	\label{defn:transfer}
@@ -23,9 +20,10 @@ defines a separate task.
 	learning of the target predictive function $f_T(\cdot)$ in $\cD_T$ using the knowledge  in $\cD_S$ and $\cT_S$, where $\cD_S \ne \cD_T$, or $\cT_S \ne \cT_T$.
 \end{definition}
 In this paper, we study the setting of \emph{domain adaptation}
-where $\cT_S \ne \cT_T$ and $\cX_S = \cX_T$, so $\cD_S \ne \cD_T$ means that the distributions $P_S$ and $P_T$ are different.
+where $\cT_S = \cT_T$ and $\cX_S = \cX_T$, so $\cD_S \ne \cD_T$ means that the distributions $P_S$ and $P_T$ are different.
 
-\Cref{defn:transfer} is quite general but does not give a nuanced view of different aspects of visual reasoning.
+\Cref{defn:transfer} is quite general but does not give a nuanced view of 
+the different aspects of visual reasoning.
 As mentioned in the introduction, one setting is the case of static images,
 where this could be due to having different feature combinations in the source and target.
 A different setting is in the context of video reasoning where the number of frames can increase significantly going from source to target.
@@ -33,7 +31,7 @@ These require possibly very different methods: the first involves building disen
 domains; the second might need external memory to remember relevant objects to generalize across frame lengths.
 Another situation is when the questions themselves can be grouped into families such as count-based queries,
 comparison of objects, or existence of objects with certain features etc.
-This entails studying transfer learning in specific settings.
+This motivates studying transfer learning for visual reasoning using a more detailed approach.
 
 \begin{figure*}[!t]
 	\centering
@@ -42,36 +40,38 @@ This entails studying transfer learning in specific settings.
 	\label{fig:taskonomy}\vspace{-10pt}
 \end{figure*}
 
-We now formally define 3 kinds of transfer learning problems, namely,
-\emph{feature transfer}, \emph{temporal transfer},
-and \emph{reasoning transfer}.
+We now formally define 3 kinds of transfer learning problems for visual reasoning, 
+namely, \emph{feature transfer}, \emph{temporal transfer}, and \emph{reasoning transfer}.
 These are illustrated in~\cref{fig:taskonomy} using representative examples from CLEVR using dataset variants CoGenT-A and CoGenT-B, and COG using two dataset types: canonical and hard. These datasets were chosen because they
 are particularly suited for experimental investigations of transfer learning described in the following section.
 %In \cref{sec:experiments}, we detail the performance of SAMNet for each of these 3 kinds, using the CLEVR-CoGenT dataset for feature transfer, the COG dataset for temporal transfer, and finally both datasets for reasoning transfer, with appropriate baseline comparisons.
 Let $\cQ$ and $\cV$ denote the set of questions and visual inputs, respectively.
+The feature space is $\cQ \times \cV$ and the task is to answer
+the question $q \in \cQ$ on visual input $v \in \cV$.
+The output set $\cY$ is the union of legitimate answers
+over all questions in $\cQ$.
 \begin{description}
 	%\compresslist % used to reduce spacing
-	\item[Feature Transfer:] In this setting of domain adaptation, $\cX_S = \cX_T \subseteq \cQ \times \cV$
-	and the task $f(q,v)$ is just the answer to the question $q$ on visual input $v$. The output set $\cY$ is the union of legitimate answers
-	over all questions in $\cQ$.
-	The distributions $P_S$ and $P_T$ differ in the feature attributes such as shape, color, and size, or their combinations
+	\item[Feature Transfer:] In this setting of domain adaptation, 
+	the distributions $P_S$ and $P_T$ of the source and target, respectively, differ in the feature attributes such as shape, color, and size, or their combinations
 	thereof.
 	For example, CoGenT-A and CoGenT-B variants of CLEVR use complementary colors
 	for cubes and cylinders (\cref{fig:taskonomy}), so $P_S$ and $P_T$ have disjoint support when conditioned on these shapes. This is empirically investigated in~\cref{sec:feature}.
 		
-	\item[Temporal Transfer:] This is again similar to feature transfer in that $\cX_S = \cX_T \subseteq \cQ \times \cV$
-	and there is a single task.	The key difference is that we introduce a complexity measure $C(q,v)$ that reflects the ease or difficulty of answering question $q$ on visual input $v$. 
+	\item[Temporal Transfer:] Here we introduce a complexity measure $C(q,v)$ that reflects the ease or difficulty of answering question $q$ on 
+	visual input $v$ that takes the temporal aspect of reasoning into account.
 	For any $(q_S,v_S)$ and $(q_T,v_T)$ in the support of $P_S$ and $P_T$ respectively, we require that $C(q_S,v_S)$ is strictly less than $C(q_T,v_T)$.
 	For example, going from the COG canonical dataset to the hard dataset, we see that there are more distracting objects in each frame and more frames to process that could cumulatively affect the ability to transfer the learned model for the canonical dataset to the hard version. This is empirically investigated in~\cref{sec:temporal}.	
 	
 	\item[Reasoning Transfer:]
-	Here, we investigate whether reasoning processes can be transferred in the setting where questions in the source and target domain belong to different categories.
-	A \emph{task family} is defined by a fixing subset of $\cQ$ that share common traits.
-	\Cref{fig:taskonomy} shows representative questions for two task families: \textit{CompareColor} and \textit{AndCompareColor}.
-	Given a fixed global distribution on $\cQ \times \cV$, this induces a marginal distribution for each task family.
-	Let $\cF_S$ be the source task family and $\cF_T$ be the target task family.
-	In typical cases of transfer learning, $\cF_S$ and $\cF_T$ will involve disjoint sets of tasks and therefore, the support of $P_S$ and $P_T$ of the induced distribution on $\cQ \times \cV$ will also be disjoint.
-	In such cases, transfer learning is most effective when the two categories share common attributes in the reasoning process. This is evident in the case of \textit{CompareColor} and \textit{AndCompareColor} where the latter task, despite being complex, involves reasoning elements that can be found in the former task. The effectiveness of reasoning transfer with respect to various combinations of source-target pairs is thoroughly investigated in~\cref{sec:reasoning-transfer-clevr} using the CoGenT-A variant of CLEVR and in~\cref{sec:reasoning-transfer-cog} using the COG canonical dataset.
+	Here, we investigate whether the reasoning processes can be transferred in the setting where questions in the source and target domain belong to different categories.
+	Fix a subset $\cQ' \subseteq \cQ$ of questions sharing a common structure.
+	\Cref{fig:taskonomy} shows representative questions for two subsets with  self-explanatory names: \textit{CompareColor} and \textit{AndCompareColor}.
+	Given a fixed global distribution on $\cQ \times \cV$, observe that
+	$\cQ'$ induces a conditional distribution on $\cQ \times \cV$.
+	Let $\cQ_S$ and $\cQ_T$ be the source and target questions, respectively; typically, $\cQ_S$ and $\cQ_T$ will be disjoint, therefore, this also holds for the support of $P_S$ and $P_T$ on the induced distribution.
+	Transfer learning in this setting is most effective when the source and target questions
+	share common attributes in the reasoning process. This is evidently true for \textit{CompareColor} and the more complex \textit{AndCompareColor}; the latter category involves reasoning elements that can be found in the former category. The effectiveness of reasoning transfer with respect to various combinations of source-target pairs is thoroughly investigated in~\cref{sec:reasoning-transfer-clevr} using the CoGenT-A variant of CLEVR and in~\cref{sec:reasoning-transfer-cog} using the COG canonical dataset.
 	
 
 %	\item[Temporal Transfer:] This is again a domain adaptation setting similar to feature transfer in that $\cX_S = \cX_T \subseteq \cQ \times \cV$
