--- a/Transfer_Learning/eccv_submission/eccv_supplementary_material.tex
+++ b/Transfer_Learning/eccv_submission/eccv_supplementary_material.tex
@@ -21,6 +21,9 @@
 
 \usepackage{cleveref}
 \crefname{table}{Table}{Tables}
+\crefname{figure}{Figure}{Figures}
+
+\renewcommand{\vec}[1]{\mathbf{#1}}
 
 \begin{document}
 
